[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
argon2 = "^0.4"
axum = { version = "^0.6", features = ["headers"] }
clap = { version = "^4", features = ["derive", "env"] }
dotenv = "^0.15"
headers = "^0.3"
jsonwebtoken = "^8"
lazy_static = "^1"
password-hash = { version = "^0.4", features = ["default", "std"] }
rand = "^0.8"
rayon = "^1"
sea-orm = { version = "^0.11", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"
time = { version = "^0.3" }
tokio = { version = "^1.0", features = ["full"] }
tower = "^0.4"
tower-http = { version = "^0.3", features = ["cors", "trace"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
uuid = { version = "^1", features = ["v4"] }
validator = { version = "^0.16", features = ["derive"] }
